[gd_scene load_steps=3 format=3 uid="uid://cfupml0vgjpdg"]

[ext_resource type="Script" uid="uid://bqab60yf4u2yp" path="res://Menus/pause_menu.gd" id="1_i2531"]
[ext_resource type="PackedScene" uid="uid://b8teh84y5wh6e" path="res://Menus/options_menu.tscn" id="2_ik086"]

[node name="PauseMenu" type="VBoxContainer"]
process_mode = 2
visible = false
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_i2531")

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 2

[node name="QuitButton" type="Button" parent="."]
layout_mode = 2

[node name="OptionsMenu" parent="." instance=ExtResource("2_ik086")]
visible = false
layout_mode = 2

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="closed_menu" from="OptionsMenu" to="." method="_on_options_menu_closed_menu"]
